feat: Initialize Supabase client and add process env shim
Adds a shim for `process.env` in `index.html` to ensure compatibility with libraries that expect it.
Initializes the Supabase client in `supabase.ts` with fallback URLs and keys, and refactors the `updateListing` function to correctly remove system fields before updating.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       .safe-top { padding-top: env(safe-area-inset-top); }
       .safe-bottom { padding-bottom: env(safe-area-inset-bottom); }
     </style>
+    <!-- Shim for process.env to ensure compatibility with library expectations -->
+    <script>
+      window.process = window.process || { env: {} };
+    </script>
     <script type="importmap">
     {
       "imports": {
@@ -42,5 +46,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- Entry point for the React application -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
