feat: Improve UI and Supabase integration
Enhance the user interface with improved styling, transitions, and font weights. Update Supabase integration to use standard Vite environment variable access and refactor `getOwnerListings` to accept `owner_id` as a parameter. Add error handling for authentication checks and bookmark toggling.

Refactor ListingCard to handle missing session during bookmarking and improve its visual presentation. Optimize Home page content loading and UI elements for better readability and user experience. Add a `deletingId` state to OwnerDashboard for better feedback during listing deletion.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
       body {
         font-family: 'Inter', sans-serif;
         background-color: #F8FAF9;
         margin: 0;
+        -webkit-tap-highlight-color: transparent;
       }
       .bg-urban-green { background-color: #2D5A47; }
       .text-urban-green { color: #2D5A47; }
@@ -21,6 +22,21 @@
       .hover-urban-green:hover { background-color: #244839; }
       .no-scrollbar::-webkit-scrollbar { display: none; }
       .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
+      
+      /* Smooth transitions */
+      * { transition: background-color 0.2s ease, transform 0.1s ease; }
+      .line-clamp-1 {
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;  
+        overflow: hidden;
+      }
+      .line-clamp-2 {
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;  
+        overflow: hidden;
+      }
     </style>
   <script type="importmap">
 {
